0.02
 - Add Test::NoWarnings to version test.
 - Add examples/ directory.
 - Add minimal version of Perl.
 - Fix test dependencies.

0.01 2015-03-17T10:54:46+01:00
 - First version.